tests/error/name.py
type = 123
print typo
